# ese-rs

./: .gitignore  Cargo.toml  README.md  RELEASE.md  ese.py
.github/workflows/: ci.yml  release.yml
benches/: parsing_benchmarks.rs
examples/: export_all_rust.rs
python/: README.md  pyproject.toml
scripts/: TEST_README.md  benchmark_parsing.py  cleanup_test_artifacts.py  compare_all_three.py  compare_exports.py  debug_difference.py  detailed_compare.py  export_all_python.py  export_ese_py.py  export_python_bindings.py  investigate_extra_rows.py  run_full_test.py  verify_line_by_line.py
src/: constants.rs  cursor.rs  database.rs  lib.rs  python.rs  utils.rs
src/catalog/: entry.rs  parser.rs
src/header/: db_header.rs
src/page/: branch.rs  header.rs  leaf.rs  mod.rs  tag.rs
src/record/: parser.rs
tests/: test_long_values.rs  test_srudb.rs  unit_tests.rs
